--- a/stilus2.css
+++ b/stilus2.css
@@ -6,7 +6,9 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f4f4f4;
+    background-image: url('kepek/pexels-pixabay-158826.jpg');
+    background-size: cover;
+    background-position: center;
     color: #333;
     line-height: 1.6;
 }
