--- a/stilus.css
+++ b/stilus.css
@@ -181,8 +181,8 @@ h2 {
     background-color: #333;
     color: #ccc;
     text-align: center;
-    padding: 1.5rem;
-    font-size: 0.9rem;
+    padding: 30px;
+    margin-top: auto;
 }
 
 @media (max-width: 768px) {
